--- a/Assignment.html
+++ b/Assignment.html
@@ -2,14 +2,22 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Birds</title>
+<title>Home</title>
 </head>
 
 <body>
+    <nav>
+        <a href="Assignment.html">Home</a>
+        <a href="Dog.html">Dog Picture</a>
+        <a href="Dog_Video.html">Dog Video</a>
+    </nav>
     <main>
-        <h1>Birds</h1>
-        <h3>Fly to the coup</h3>
-        <p>Birds are way better than cats</p>
+        <h1>Dogs</h1>
+        <h3>Boxers</h3>
+        <p>Cats are the worst</p>
+
+        
+        <br>
         <a href="Dog.html">Boxers are the best</a>
         <a href="https://vetstreet.brightspotcdn.com/dims4/default/bd76e63/2147483647/thumbnail/645x380/quality/90/?url=https%3A%2F%2Fvetstreet-brightspot.s3.amazonaws.com%2F20%2Fcf06c09e9111e0a2380050568d634f%2Ffile%2Fboxer-5-645mk062411.jpg">Boxer puppy</a>
     </main>
