--- a/Dog.html
+++ b/Dog.html
@@ -6,9 +6,15 @@
 </head>
 
 <body>
+    <nav>
+        <a href="Assignment.html">Home</a>
+        <a href="Dog.html">Dog Picture</a>
+        <a href="Dog_Video.html">Dog Video</a>
+    </nav>
     <main>
         <h1>Boxers</h1>
         <img src="boxer-dog.jpg" alt="Boxer dog"/>
+        <blockquote>A picture of a boxer</blockquote>
     </main>
     <footer>HobbsDev 2020</footer>
 </body>
