add ol, ul, style, character code, and text-shadow property

--- a/Basic_HTML_and_CSS/HTML_Lists.html
+++ b/Basic_HTML_and_CSS/HTML_Lists.html
@@ -2,12 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Basic 5</title>
-<link rel="stylesheet" type="text/css" href="Basic_CSS_2.css">
+<title>HTML Lists</title>
+<link rel="stylesheet" type="text/css" href="CSS_Lists.css">
 </head>
 
 <body>
-    <h1 class="title">Basic5</h1>
     <div class="container">
         <h1>Unordered Lists</h2>
         <h3>Bruins Stat Leaders<h3>
@@ -25,9 +24,7 @@
             <li>Bergeron</li>
         </ol>
     </div>
-    <footer>
-        <h5 class="copy_right">&copy 2020 HobbsDev</h5>
-    </footer>
+   
 </body>
 
 </html>
