--- a/Basic_HTML_and_CSS/HTML_Table.html
+++ b/Basic_HTML_and_CSS/HTML_Table.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Table</title>
-<link rel="stylesheet" type="text/css" href="Basic_CSS_2.css">
+<link rel="stylesheet" type="text/css" href="CSS_Table.css">
 </head>
 
 <body>
-    <table style="width: 100%">
+    <div class="container">
+    <table class="table">
         <tr>
             <th>Player</th>
             <th>Position</th>
@@ -37,6 +38,7 @@
             <td>65</td>
         </tr>
     </table>
+    </div>
 </body>
 
 </html>
