link css file and change input styles

--- a/Basic_HTML_and_CSS/One-Page-Site/one_page_website.html
+++ b/Basic_HTML_and_CSS/One-Page-Site/one_page_website.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>One Page site</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="css/one_page_website.css">
     </head>
     <body>
     <!--Navbar-->
@@ -119,11 +119,12 @@
         <section>
             <div id="contact">
             <h1>Contact Us</h1>
-                <form action="" method="post">
-                    <input class="rsvp" type="text" value="First Name">
-                    <input class="rsvp" type="text" value="Last Name">
-                    <input class="rsvp" type="text" value="Email Address">
-                    <input class="rsvp" type="text" value="Message">
+                <form class="contact-form" action="" method="post">
+                    <input class="contact-info" type="text" value="" placeholder="Name">
+                    <input class="contact-info" type="text" value="" placeholder="Email">
+                    <input class="contact-info" type="text" value="" placeholder="Number">
+                    <input class="contact-info" type="text" value="" placeholder="Message">
+                    <br>
                     <input type="submit" value="Submit">
                                 
                 </form>
